fix(): Change Thread creation process